Signup CSS: fixed misalignment of 'success' icon when in learMoreProfessionals activity #1087

--- a/app/source/css/activities/learnMoreProfessionals.styl
+++ b/app/source/css/activities/learnMoreProfessionals.styl
@@ -526,10 +526,10 @@
                         border-color: white;
                     }
                     .fa {
-                        font-size: 29px !important;
+                        font-size: 26px !important;
                     }
                     .icon-right {
-                        margin-top: -35px;
+                        margin-top: -33px;
                     }
                     .form-control {
                         height: 40px;
