--- a/app/source/css/components/SignupLogin.styl
+++ b/app/source/css/components/SignupLogin.styl
@@ -44,7 +44,7 @@
     .icon-right {
         padding-left: 0px;
         padding-right: 15px;
-        margin-top: -50px;
+        margin-top: -28px;
     }
     .form-control {
         height: 64px;
